OpenShift-NVIDIA-Inference/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: triton-inference-service
spec:
  selector:
    app: triton-inference-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
