OpenShift-NVIDIA-Inference/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: triton-inference-route
spec:
  to:
    kind: Service
    name: triton-inference-service
  port:
    targetPort: 8000
